<resources>
    <string name="app_name">Signature Verification</string>
    <string name="home_background">Home Background</string>
    <string name="logo">logo</string>
    <string name="add_a_signature">Add a Signature?</string>
    <string name="verify_a_signature">Verify a Signature?</string>
    <string name="need_help">need help?</string>
    <string name="by_continuing_you_agree_to_terms_nbsp_conditions">By continuing you agree to Terms &amp; Conditions</string>
    <string name="next">NEXT</string>
    <string name="pencil_icon">Pencil Icon</string>
    <string name="enter_your_signature">Enter your signature</string>
    <string name="makesure">Make sure you sign your signature \n in your best penmanship</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
    <string name="verify">verify</string>
    <string name="capture">capture</string>
    <string name="verify_a_signature_1">Verify A Signature</string>
    <string name="make_sure_in_verify_a_signature">Make sure the entire name you\'ve selected and the signature you\'ve presented are same!</string>
    <string name="enter_your_personal_details">Enter your personal details</string>
    <string name="first_name"><i>First Name</i></string>
    <string name="fill_up_the_blanks_with_your_truthful_response_to_the_following_question">Fill up the blanks with your truthful response to the following question!</string>
    <string name="last_name"><i>Last Name</i></string>
    <string name="department"><i>Department</i></string>
    <string name="submit">Submit</string>
    <string name="error">Error</string>
</resources>