<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSigDetails"
    android:background="@drawable/entersignaturebg">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pencil"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/pencil_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_personal_details"
            android:textSize="18sp"
            android:fontFamily="@font/semibold"
            android:textColor="@color/brown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_up_the_blanks_with_your_truthful_response_to_the_following_question"
            android:textSize="14sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/brown"
            android:textAlignment="center"
            android:layout_marginBottom="34dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="313dp"
            android:layout_height="47dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp"
            android:foreground="?android:attr/selectableItemBackground">

            <EditText
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textviewshape"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="313dp"
            android:layout_height="47dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp"
            android:foreground="?android:attr/selectableItemBackground">

            <EditText
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textviewshape"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="313dp"
            android:layout_height="47dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp"
            android:foreground="?android:attr/selectableItemBackground">

            <EditText
                android:id="@+id/dept"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textviewshape"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:hint="@string/department"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/submit"
            android:layout_width="258dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAllCaps="true"/>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/imageConverted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>