<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/add_signature"
            android:layout_width="338dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="34dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/add_a_signature"
                android:textColor="@color/brown"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/verify_signature"
            android:layout_width="338dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="28dp"
            app:cardBackgroundColor="@color/blue"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/verify_a_signature"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/need_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_help"
            android:textSize="12sp"
            android:fontFamily="@font/italic"
            android:textColor="@color/brown" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_continuing_you_agree_to_terms_nbsp_conditions"
        android:textSize="12sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/brown"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>