<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/entersignaturebg"
    tools:context=".EnterSignature">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/pencil_icon"
            android:src="@drawable/pencil" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="@string/enter_your_signature"
            android:textColor="@color/brown"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:fontFamily="@font/medium"
            android:text="@string/makesure"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/next"
            android:layout_width="258dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/intent2"
            android:layout_width="258dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:visibility="gone"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="36dp"
            app:cardElevation="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>