<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignatureVerification"
    android:background="@drawable/entersignaturebg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/verifyIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                tools:ignore="ContentDescription"
                android:src="@drawable/verifydocu"/>

            <TextView
                android:id="@+id/txtEnterSignature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_signature"
                android:textSize="18sp"
                android:fontFamily="@font/semibold"
                android:textColor="@color/brown"
                app:layout_constraintTop_toBottomOf="@+id/verifyIcon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/makeSure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makesure"
                android:textSize="14sp"
                android:fontFamily="@font/medium"
                android:textColor="@color/brown"
                android:textAlignment="center"
                android:layout_marginBottom="34dp"
                app:layout_constraintTop_toBottomOf="@+id/txtEnterSignature"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


            <ImageView
                android:id="@+id/imageCaptured"
                android:layout_width="300dp"
                android:layout_height="400dp"
                android:layout_margin="15dp"
                android:background="@drawable/canvassignature"
                app:layout_constraintTop_toBottomOf="@+id/makeSure"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/imageCaptured"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/capture"
                    android:layout_width="120dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="36dp"
                    app:cardElevation="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/semibold"
                        android:gravity="center"
                        android:text="@string/capture"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/verify"
                    android:layout_width="120dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="36dp"
                    app:cardElevation="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/semibold"
                        android:gravity="center"
                        android:text="@string/verify"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>