<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignature"
    android:background="@drawable/entersignaturebg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forSignature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/add_signature"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/clear"
                android:layout_width="120dp"
                android:layout_height="42dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="36dp"
                app:cardElevation="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/next"
                android:layout_width="120dp"
                android:layout_height="42dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="36dp"
                app:cardElevation="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/save"
                android:layout_width="120dp"
                android:layout_height="42dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="36dp"
                app:cardElevation="12dp"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_signature"
            android:layout_width="580dp"
            android:layout_height="match_parent"
            android:background="@drawable/canvassignature"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonContainer"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:layout_margin="10dp">

            <com.kyanogen.signatureview.SignatureView
                android:id="@+id/signatureCanvas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                sign:backgroundColor="@color/white"
                sign:enableSignature="true"
                sign:penColor="@color/black"
                sign:penSize="5dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>